--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+* {
+  box-sizing: border-box;
+}
+
 :root {
   line-height: 1.5;
   font-weight: 400;
   font-family: "Roboto", sans-serif;
+
 }
 
 body {
@@ -12,6 +17,7 @@ body {
 
 main {
   margin: 50px;
+  min-height: 68vh;
 }
 
 header,
@@ -19,4 +25,8 @@ footer {
   padding: 20px;
   color: #ffffff;
   background-color: #000000;
+}
+
+img {
+  max-width: 100%;
 }
